tests/testcase/errors/typecheck_while_condition_error.ob
fun main() do
  while "hello" do
    return 1;
  end
end